fix: modification de IA_SVM

--- a/code/IA_ChatGpt.ipynb
+++ b/code/IA_ChatGpt.ipynb
@@ -2,41 +2,164 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9e026950",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fichiers utilisés : {'tout': 'C:/Users/floco/OneDrive/Documents/S6/Sae/yelp_academic_reviews4students.jsonl', 'Health_Medical': 'C:/Users/floco/OneDrive/Documents/S6/Sae/donnees_triees/yelp_Health_Medical.json', 'Hotels': 'C:/Users/floco/OneDrive/Documents/S6/Sae/donnees_triees/yelp_Hotels.json', 'Restaurants': 'C:/Users/floco/OneDrive/Documents/S6/Sae/donnees_triees/yelp_Restaurants.json', 'Shopping': 'C:/Users/floco/OneDrive/Documents/S6/Sae/donnees_triees/yelp_Shopping.jsonl'}\n",
+      "\n",
+      "=============================\n",
+      " MODELE POUR : TOUT\n",
+      "=============================\n",
+      "Nb lignes : 1000000\n",
+      "stars\n",
+      "5    462646\n",
+      "4    207953\n",
+      "1    153057\n",
+      "3     98714\n",
+      "2     77630\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
+    "import json\n",
+    "import re\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "from sklearn import svm\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report\n",
     "import os\n",
-    "import sys\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# 1. On charge les variables du .env\n",
+    "# =========================\n",
+    "# CONFIG\n",
+    "# =========================\n",
+    "\n",
     "load_dotenv()\n",
     "\n",
     "FICHIER_AVIS = os.getenv(\"INPUT_REVIEWS\")\n",
+    "FICHIER_BUSINESS = os.getenv(\"INPUT_BUSINESS\")\n",
+    "FICHIER_SORTIE = os.getenv(\"OUTPUT_FILE\")\n",
     "\n",
-    "df = pd.read_json(FICHIER_AVIS, lines=True, chunksize=50000)\n",
-    "df = next(df) # On ne prend que le premier bloc de 50k avis\n",
+    "FILES = {\n",
+    "    \"tout\": FICHIER_AVIS,\n",
+    "    \"Health_Medical\": os.getenv(\"HEALTH_MEDICAL\"),\n",
+    "    \"Hotels\": os.getenv(\"HOTELS\"),\n",
+    "    \"Restaurants\": os.getenv(\"RESTAURANTS\"),\n",
+    "    \"Shopping\": os.getenv(\"SHOPPING\"),\n",
+    "}\n",
     "\n",
-    "# 2. Création de la target 1 : Polarité (Sentiment)\n",
-    "def get_sentiment(stars):\n",
-    "    if stars > 3: return 2 # Positif (Mapping numérique pour les modèles)\n",
-    "    elif stars < 3: return 0 # Négatif\n",
-    "    else: return 1 # Neutre\n",
+    "print(\"Fichiers utilisés :\", FILES)\n",
     "\n",
-    "df['label_sentiment'] = df['stars'].apply(get_sentiment)\n",
     "\n",
-    "# 3. Target 2 : Score (Rating)\n",
-    "# Déjà présent dans 'stars' (1 à 5). \n",
-    "# Note : Pour les modèles, il vaut mieux souvent décaler à 0-4 (donc stars - 1)\n",
-    "df['label_rating'] = df['stars'] - 1 \n",
+    "# =========================\n",
+    "# FONCTIONS UTILES\n",
+    "# =========================\n",
     "\n",
-    "# 4. Nettoyage basique (optionnel mais conseillé)\n",
-    "# Minuscules, suppression ponctuation...\n",
-    "df['clean_text'] = df['text'].str.lower()"
+    "def clean_text(text):\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r\"http\\S+\", \"\", text)\n",
+    "    text = re.sub(r\"[^a-zàâçéèêëîïôûùüÿñæœ\\s]\", \"\", text)\n",
+    "    text = re.sub(r\"\\s+\", \" \", text)\n",
+    "    return text.strip()\n",
+    "\n",
+    "\n",
+    "def load_dataset(path):\n",
+    "    data = []\n",
+    "\n",
+    "    # Vérification simple si le fichier existe\n",
+    "    if not path or not os.path.exists(path):\n",
+    "        print(f\"⚠️ Fichier introuvable : {path}\")\n",
+    "        return pd.DataFrame(columns=[\"text\", \"stars\"])\n",
+    "\n",
+    "    with open(path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        for line in f:\n",
+    "            try:\n",
+    "                # La magie opère ici : json.loads comprend automatiquement le format\n",
+    "                review = json.loads(line)\n",
+    "\n",
+    "                # On extrait proprement\n",
+    "                data.append({\n",
+    "                    \"text\": review.get(\"text\", \"\"), # .get évite le crash si la clé manque\n",
+    "                    \"stars\": review.get(\"stars\", 0)\n",
+    "                })\n",
+    "            except json.JSONDecodeError:\n",
+    "                continue # On saute juste la ligne si elle est illisible\n",
+    "\n",
+    "    return pd.DataFrame(data)\n",
+    "\n",
+    "\n",
+    "# =========================\n",
+    "# BOUCLE PRINCIPALE\n",
+    "# =========================\n",
+    "\n",
+    "for etablissement, filepath in FILES.items():\n",
+    "\n",
+    "    print(f\"\\n=============================\")\n",
+    "    print(f\" MODELE POUR : {etablissement.upper()}\")\n",
+    "    print(f\"=============================\")\n",
+    "\n",
+    "    # 1. Chargement\n",
+    "    df = load_dataset(filepath)\n",
+    "    print(\"Nb lignes :\", len(df))\n",
+    "    print(df[\"stars\"].value_counts())\n",
+    "\n",
+    "    # 2. Nettoyage\n",
+    "    df[\"clean_text\"] = df[\"text\"].apply(clean_text)\n",
+    "\n",
+    "    # (optionnel) réduire pour aller plus vite\n",
+    "    df = df.sample(200000, random_state=42)\n",
+    "\n",
+    "    # 3. Split\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        df[\"clean_text\"],\n",
+    "        df[\"stars\"],\n",
+    "        test_size=0.2,\n",
+    "        random_state=42,\n",
+    "        stratify=df[\"stars\"]\n",
+    "    )\n",
+    "\n",
+    "    # 4. TF-IDF (UN par type)\n",
+    "    vectorizer = TfidfVectorizer(\n",
+    "        max_features=200000,\n",
+    "        ngram_range=(1, 2),\n",
+    "        stop_words=\"english\"\n",
+    "    )\n",
+    "\n",
+    "    X_train_vec = vectorizer.fit_transform(X_train)\n",
+    "    X_test_vec = vectorizer.transform(X_test)\n",
+    "\n",
+    "    # 5. Modèle\n",
+    "    model = svm.SVC(kernel='linear')\n",
+    "\n",
+    "    model.fit(X_train_vec, y_train)\n",
+    "\n",
+    "    # 6. Évaluation\n",
+    "    y_pred = model.predict(X_test_vec)\n",
+    "\n",
+    "    print(\"\\n--- RESULTATS ---\")\n",
+    "    print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "    accuracy = (y_test == y_pred).mean()\n",
+    "    print(f\"Accuracy : {accuracy:.4f}\")\n",
+    "\n",
+    "    # 7. Sauvegarde prédictions\n",
+    "    df_pred = pd.DataFrame({\n",
+    "        \"true_stars\": y_test.values,\n",
+    "        \"predicted_stars\": y_pred\n",
+    "    })\n",
+    "\n",
+    "    output_file = f\"predictions_{etablissement}.csv\"\n",
+    "    df_pred.to_csv(output_file, index=False)\n",
+    "\n",
+    "    print(f\"Fichier sauvegardé : {output_file}\")\n"
    ]
   },
   {
@@ -282,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.12"
   }
  },
  "nbformat": 4,
