fix: je sais pas mais on la fait apparement

--- a/code/ia BERT.ipynb
+++ b/code/ia BERT.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1da6a222",
    "metadata": {},
    "outputs": [
@@ -127,9 +127,9 @@
     }
    ],
    "source": [
-    "!pip install torch                \n",
-    "!pip install transformers \n",
-    "!pip install pandas \n",
+    "!pip install torch\n",
+    "!pip install transformers\n",
+    "!pip install pandas\n",
     "!pip install scikit-learn\n"
    ]
   },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "42093872",
    "metadata": {},
    "outputs": [],
@@ -241,17 +241,17 @@
     "    \"\"\"\n",
     "    # Charger directement avec pandas (beaucoup plus simple et rapide)\n",
     "    data = pd.read_json(path, lines=True)\n",
-    "    \n",
+    "\n",
     "    # Ne garder que les colonnes nécessaires\n",
     "    df = pd.DataFrame({\n",
     "        \"texte\": data[\"text\"],\n",
     "        \"stars\": data[\"stars\"]\n",
     "    })\n",
-    "    \n",
+    "\n",
     "    print(f\"✓ Données chargées : {len(df)} lignes\")\n",
     "    print(f\"✓ Distribution des étoiles :\")\n",
     "    print(df[\"stars\"].value_counts().sort_index())\n",
-    "    \n",
+    "\n",
     "    return df\n"
    ]
   },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "e9ca17ba",
    "metadata": {},
    "outputs": [
@@ -574,32 +574,32 @@
     "for epoch in range(epochs):\n",
     "    print(f\"\\nEpoch {epoch + 1}/{epochs}\")\n",
     "    total_loss = 0\n",
-    "    \n",
+    "\n",
     "    # Ajouter tqdm ici\n",
     "    progress_bar = tqdm(train_loader, desc=f\"Epoch {epoch+1}\", unit=\"batch\")\n",
-    "    \n",
+    "\n",
     "    for batch in progress_bar:\n",
     "        optimizer.zero_grad()\n",
-    "        \n",
+    "\n",
     "        input_ids = batch[\"input_ids\"].to(device)\n",
     "        attention_mask = batch[\"attention_mask\"].to(device)\n",
     "        labels = batch[\"labels\"].to(device)\n",
-    "        \n",
+    "\n",
     "        outputs = model(\n",
     "            input_ids=input_ids,\n",
     "            attention_mask=attention_mask,\n",
     "            labels=labels\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        loss = outputs.loss\n",
     "        total_loss += loss.item()\n",
-    "        \n",
+    "\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        \n",
+    "\n",
     "        # Afficher la loss en temps réel\n",
     "        progress_bar.set_postfix({'loss': f'{loss.item():.4f}'})\n",
-    "    \n",
+    "\n",
     "    print(\"Loss moyenne :\", total_loss / len(train_loader))"
    ]
   },
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "ca8c5c62",
    "metadata": {},
    "outputs": [
@@ -699,10 +699,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Test manuel :\n",
-      "positif\n",
-      "positif\n",
-      "positif\n"
+      "Test manuel :\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'tokenizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     14\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m reverse_map[prediction]\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mTest manuel :\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mpredict_mood\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mJe suis un nigger\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[32m     18\u001b[39m \u001b[38;5;28mprint\u001b[39m(predict_mood(\u001b[33m\"\u001b[39m\u001b[33mCette journée est incroyable\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m     19\u001b[39m \u001b[38;5;28mprint\u001b[39m(predict_mood(\u001b[33m\"\u001b[39m\u001b[33mLe train arrive à 8h\u001b[39m\u001b[33m\"\u001b[39m))\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36mpredict_mood\u001b[39m\u001b[34m(text)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpredict_mood\u001b[39m(text):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     encoding = \u001b[43mtokenizer\u001b[49m(\n\u001b[32m      3\u001b[39m         text,\n\u001b[32m      4\u001b[39m         return_tensors=\u001b[33m\"\u001b[39m\u001b[33mpt\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      5\u001b[39m         truncation=\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m      6\u001b[39m         padding=\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m      7\u001b[39m         max_length=\u001b[32m128\u001b[39m\n\u001b[32m      8\u001b[39m     ).to(device)\n\u001b[32m     10\u001b[39m     outputs = model(**encoding)\n\u001b[32m     11\u001b[39m     prediction = torch.argmax(outputs.logits, dim=\u001b[32m1\u001b[39m).item()\n",
+      "\u001b[31mNameError\u001b[39m: name 'tokenizer' is not defined"
      ]
     }
    ],
@@ -724,7 +733,7 @@
     "    return reverse_map[prediction]\n",
     "\n",
     "print(\"\\nTest manuel :\")\n",
-    "print(predict_mood(\"Je suis fatigué mais ça va\"))\n",
+    "print(predict_mood(\"Je suis un nigger\"))\n",
     "print(predict_mood(\"Cette journée est incroyable\"))\n",
     "print(predict_mood(\"Le train arrive à 8h\"))\n"
    ]
@@ -746,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.12"
   }
  },
  "nbformat": 4,
