--- a/code/deep_learning/ia BERT.ipynb
+++ b/code/deep_learning/ia BERT.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "1da6a222",
    "metadata": {},
    "outputs": [
@@ -124,30 +124,49 @@
       "[notice] A new release of pip is available: 25.3 -> 26.0.1\n",
       "[notice] To update, run: C:\\Users\\flocon\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting dotenv\n",
+      "  Using cached dotenv-0.9.9-py2.py3-none-any.whl.metadata (279 bytes)\n",
+      "Collecting python-dotenv (from dotenv)\n",
+      "  Using cached python_dotenv-1.2.1-py3-none-any.whl.metadata (25 kB)\n",
+      "Using cached dotenv-0.9.9-py2.py3-none-any.whl (1.9 kB)\n",
+      "Using cached python_dotenv-1.2.1-py3-none-any.whl (21 kB)\n",
+      "Installing collected packages: python-dotenv, dotenv\n",
+      "\n",
+      "   ---------------------------------------- 0/2 [python-dotenv]\n",
+      "   ---------------------------------------- 2/2 [dotenv]\n",
+      "\n",
+      "Successfully installed dotenv-0.9.9 python-dotenv-1.2.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.3 -> 26.0.1\n",
+      "[notice] To update, run: C:\\Users\\flocon\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
     }
    ],
    "source": [
     "!pip install torch                \n",
     "!pip install transformers \n",
     "!pip install pandas \n",
-    "!pip install scikit-learn\n"
+    "!pip install scikit-learn\n",
+    "!pip install dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "f63d4c6a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\flocon\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -158,6 +177,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
+    "from dotenv import load_dotenv\n",
+    "from pathlib import Path\n",
+    "import os\n",
     "\n",
     "\n"
    ]
@@ -172,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "fd7c1ff3",
    "metadata": {},
    "outputs": [
@@ -209,17 +231,19 @@
     "import pandas as pd\n",
     "import json\n",
     "\n",
-    "# Chemin relatif vers le fichier\n",
-    "file_path = \"../data/yelp_academic_reviews4students.jsonl\"\n",
+    "load_dotenv()\n",
+    "\n",
+    "FICHIER_REVIEWS = os.getenv(\"INPUT_REVIEWS\")\n",
+    "\n",
     "\n",
     "# Méthode 1 : Avec pandas (recommandé)\n",
     "try:\n",
-    "    data = pd.read_json(file_path, lines=True)\n",
+    "    data = pd.read_json(FICHIER_REVIEWS, lines=True)\n",
     "    print(f\"✓ Données chargées : {len(data)} lignes\")\n",
     "    print(f\"✓ Colonnes : {list(data.columns)}\")\n",
     "    print(data.head())\n",
     "except FileNotFoundError:\n",
-    "    print(f\"✗ Fichier introuvable : {file_path}\")\n",
+    "    print(f\"✗ Fichier introuvable : {FICHIER_REVIEWS}\")\n",
     "    print(\"Vérifiez que le fichier existe dans le dossier 'data' du répertoire parent\")\n",
     "except Exception as e:\n",
     "    print(f\"✗ Erreur : {e}\")\n"
@@ -227,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "42093872",
    "metadata": {},
    "outputs": [],
@@ -257,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "6c952244",
    "metadata": {},
    "outputs": [
@@ -285,14 +309,14 @@
     }
    ],
    "source": [
-    "df = load_yelp_dataset(\"../data/yelp_academic_reviews4students.jsonl\")\n",
+    "df = load_yelp_dataset(FICHIER_REVIEWS)\n",
     "print(len(df))\n",
     "print(df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "d48ea19a",
    "metadata": {},
    "outputs": [],
@@ -302,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "d0fa8a7f",
    "metadata": {},
    "outputs": [],
@@ -328,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "eedbb83f",
    "metadata": {},
    "outputs": [],
@@ -351,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "9dff4300",
    "metadata": {},
    "outputs": [
@@ -359,17 +383,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading weights: 100%|██████████| 199/199 [00:00<00:00, 907.94it/s, Materializing param=bert.pooler.dense.weight]                               \n",
+      "Loading weights: 100%|██████████| 199/199 [00:00<00:00, 892.69it/s, Materializing param=bert.pooler.dense.weight]                               \n",
       "\u001b[1mBertForSequenceClassification LOAD REPORT\u001b[0m from: bert-base-uncased\n",
       "Key                                        | Status     | \n",
       "-------------------------------------------+------------+-\n",
-      "cls.seq_relationship.weight                | UNEXPECTED | \n",
-      "cls.predictions.transform.LayerNorm.weight | UNEXPECTED | \n",
-      "cls.predictions.transform.LayerNorm.bias   | UNEXPECTED | \n",
-      "cls.seq_relationship.bias                  | UNEXPECTED | \n",
-      "cls.predictions.transform.dense.weight     | UNEXPECTED | \n",
-      "cls.predictions.bias                       | UNEXPECTED | \n",
       "cls.predictions.transform.dense.bias       | UNEXPECTED | \n",
+      "cls.predictions.transform.LayerNorm.bias   | UNEXPECTED | \n",
+      "cls.predictions.bias                       | UNEXPECTED | \n",
+      "cls.predictions.transform.LayerNorm.weight | UNEXPECTED | \n",
+      "cls.seq_relationship.weight                | UNEXPECTED | \n",
+      "cls.predictions.transform.dense.weight     | UNEXPECTED | \n",
+      "cls.seq_relationship.bias                  | UNEXPECTED | \n",
       "classifier.weight                          | MISSING    | \n",
       "classifier.bias                            | MISSING    | \n",
       "\n",
@@ -412,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "349fa64c",
    "metadata": {},
    "outputs": [],
@@ -433,8 +457,8 @@
     "train_dataset = MoodDataset(train_encodings, train_labels)\n",
     "test_dataset = MoodDataset(test_encodings, test_labels)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=8, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=8)"
+    "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32)"
    ]
   },
   {
@@ -447,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "c0f4d7ec",
    "metadata": {},
    "outputs": [
@@ -455,17 +479,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading weights: 100%|██████████| 197/197 [00:00<00:00, 906.89it/s, Materializing param=roberta.encoder.layer.11.output.dense.weight]              \n",
+      "Loading weights: 100%|██████████| 197/197 [00:00<00:00, 949.02it/s, Materializing param=roberta.encoder.layer.11.output.dense.weight]              \n",
       "\u001b[1mCamembertForSequenceClassification LOAD REPORT\u001b[0m from: camembert-base\n",
       "Key                         | Status     | \n",
       "----------------------------+------------+-\n",
+      "lm_head.dense.bias          | UNEXPECTED | \n",
+      "lm_head.layer_norm.weight   | UNEXPECTED | \n",
       "lm_head.layer_norm.bias     | UNEXPECTED | \n",
+      "lm_head.dense.weight        | UNEXPECTED | \n",
+      "roberta.pooler.dense.weight | UNEXPECTED | \n",
       "roberta.pooler.dense.bias   | UNEXPECTED | \n",
       "lm_head.bias                | UNEXPECTED | \n",
-      "lm_head.dense.weight        | UNEXPECTED | \n",
-      "lm_head.dense.bias          | UNEXPECTED | \n",
-      "roberta.pooler.dense.weight | UNEXPECTED | \n",
-      "lm_head.layer_norm.weight   | UNEXPECTED | \n",
       "classifier.out_proj.weight  | MISSING    | \n",
       "classifier.dense.bias       | MISSING    | \n",
       "classifier.out_proj.bias    | MISSING    | \n",
@@ -499,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "e9ca17ba",
    "metadata": {},
    "outputs": [
@@ -515,14 +539,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 200/200 [05:37<00:00,  1.69s/batch, loss=0.8086]\n"
+      "Epoch 1: 100%|██████████| 100/100 [05:07<00:00,  3.08s/batch, loss=0.5995]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss moyenne : 0.8603854888677597\n",
+      "Loss moyenne : 0.8460981404781341\n",
       "\n",
       "Epoch 2/3\n"
      ]
@@ -531,14 +555,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2: 100%|██████████| 200/200 [05:36<00:00,  1.68s/batch, loss=0.6976]\n"
+      "Epoch 2: 100%|██████████| 100/100 [05:00<00:00,  3.00s/batch, loss=0.5019]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss moyenne : 0.8105299969017505\n",
+      "Loss moyenne : 0.7734653514623642\n",
       "\n",
       "Epoch 3/3\n"
      ]
@@ -547,14 +571,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3: 100%|██████████| 200/200 [05:36<00:00,  1.68s/batch, loss=1.2006]"
+      "Epoch 3: 100%|██████████| 100/100 [05:01<00:00,  3.01s/batch, loss=1.0532]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss moyenne : 0.7147563222050667\n"
+      "Loss moyenne : 0.6738805681467056\n"
      ]
     },
     {
@@ -575,7 +599,6 @@
     "    print(f\"\\nEpoch {epoch + 1}/{epochs}\")\n",
     "    total_loss = 0\n",
     "    \n",
-    "    # Ajouter tqdm ici\n",
     "    progress_bar = tqdm(train_loader, desc=f\"Epoch {epoch+1}\", unit=\"batch\")\n",
     "    \n",
     "    for batch in progress_bar:\n",
@@ -597,7 +620,6 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        # Afficher la loss en temps réel\n",
     "        progress_bar.set_postfix({'loss': f'{loss.item():.4f}'})\n",
     "    \n",
     "    print(\"Loss moyenne :\", total_loss / len(train_loader))"
@@ -614,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "2e3c2fbc",
    "metadata": {},
    "outputs": [
@@ -626,13 +648,13 @@
       "Résultats :\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     negatif       0.56      0.52      0.54        95\n",
-      "      neutre       0.00      0.00      0.00        41\n",
-      "     positif       0.76      0.90      0.82       264\n",
+      "     negatif       0.59      0.63      0.61       108\n",
+      "      neutre       0.00      0.00      0.00        49\n",
+      "     positif       0.76      0.89      0.82       243\n",
       "\n",
-      "    accuracy                           0.72       400\n",
-      "   macro avg       0.44      0.47      0.45       400\n",
-      "weighted avg       0.64      0.72      0.67       400\n",
+      "    accuracy                           0.71       400\n",
+      "   macro avg       0.45      0.51      0.48       400\n",
+      "weighted avg       0.62      0.71      0.66       400\n",
       "\n"
      ]
     },
@@ -690,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "ca8c5c62",
    "metadata": {},
    "outputs": [
