--- a/code/deep_learning/ia CNN.ipynb
+++ b/code/deep_learning/ia CNN.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1da6a222",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f63d4c6a",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fd7c1ff3",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "42093872",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6c952244",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d48ea19a",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d0fa8a7f",
    "metadata": {},
    "outputs": [],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "eedbb83f",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9dff4300",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "349fa64c",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c0f4d7ec",
    "metadata": {},
    "outputs": [],
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e9ca17ba",
    "metadata": {},
    "outputs": [],
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2e3c2fbc",
    "metadata": {},
    "outputs": [
@@ -532,11 +532,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 0.5392\n",
-      "Epoch 2, Loss: 0.3980\n",
-      "Epoch 3, Loss: 0.3626\n",
-      "Epoch 4, Loss: 0.3442\n",
-      "Epoch 5, Loss: 0.3298\n"
+      "Epoch 1, Loss: 0.5323\n",
+      "Epoch 2, Loss: 0.3952\n",
+      "Epoch 3, Loss: 0.3619\n",
+      "Epoch 4, Loss: 0.3423\n",
+      "Epoch 5, Loss: 0.3283\n"
      ]
     }
    ],
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ca8c5c62",
    "metadata": {},
    "outputs": [
@@ -581,13 +581,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.88      0.85      9262\n",
-      "           1       0.61      0.21      0.31      3895\n",
-      "           2       0.90      0.97      0.94     26843\n",
+      "           0       0.85      0.85      0.85      9262\n",
+      "           1       0.55      0.28      0.37      3895\n",
+      "           2       0.91      0.97      0.94     26843\n",
       "\n",
-      "    accuracy                           0.88     40000\n",
-      "   macro avg       0.78      0.69      0.70     40000\n",
-      "weighted avg       0.86      0.88      0.86     40000\n",
+      "    accuracy                           0.87     40000\n",
+      "   macro avg       0.77      0.70      0.72     40000\n",
+      "weighted avg       0.86      0.87      0.86     40000\n",
       "\n"
      ]
     }
@@ -619,23 +619,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "a3dc6757",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Phrase: I love this restaurant\n",
-      "Prediction: POSITIF\n",
-      "Phrase: This is terrible\n",
-      "Prediction: NEGATIF\n",
-      "Phrase: It is ok\n",
-      "Prediction: POSITIF\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def predict_sentence(sentence, model, vocab, device):\n",
     "    \n",
@@ -661,12 +648,35 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "053f7b06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Phrase: I love this restaurant\n",
+      "Prediction: POSITIF\n",
+      "Phrase: This is terrible\n",
+      "Prediction: NEGATIF\n",
+      "Phrase: It is ok\n",
+      "Prediction: NEGATIF\n"
+     ]
+    }
+   ],
+   "source": [
     "predict_sentence(\"I love this restaurant\", model, vocab, device)\n",
     "\n",
     "predict_sentence(\"This is terrible\", model, vocab, device)\n",
     "\n",
-    "predict_sentence(\"It is ok\", model, vocab, device)\n",
-    "\n"
+    "predict_sentence(\"It is ok\", model, vocab, device)"
    ]
   }
  ],
