--- a/code/deep_learning/ia LSTM.ipynb
+++ b/code/deep_learning/ia LSTM.ipynb
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "9dff4300",
    "metadata": {},
    "outputs": [],
@@ -717,9 +717,11 @@
     "tokenizer = Tokenizer(num_words=MAX_WORDS, oov_token=\"<OOV>\")\n",
     "tokenizer.fit_on_texts(train_texts)\n",
     "\n",
+    "#Conversion texte → séquences\n",
     "X_train = tokenizer.texts_to_sequences(train_texts)\n",
     "X_test = tokenizer.texts_to_sequences(test_texts)\n",
     "\n",
+    "#padding\n",
     "X_train = pad_sequences(X_train, maxlen=MAX_LEN)\n",
     "X_test = pad_sequences(X_test, maxlen=MAX_LEN)\n",
     "\n",
@@ -729,24 +731,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b643f29",
-   "metadata": {},
-   "source": [
-    "\n",
-    "# 4. Dataset PyTorch\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b9ce8c43",
    "metadata": {},
    "source": [
-    "# 5. Modèle\n"
+    "# 4. Modèle\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "c0f4d7ec",
    "metadata": {},
    "outputs": [
@@ -844,8 +837,9 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
     "\n",
+    "#LSTM\n",
     "model = Sequential([\n",
-    "    Embedding(MAX_WORDS, 128, input_length=MAX_LEN),\n",
+    "    Embedding(MAX_WORDS, 128, input_length=MAX_LEN), #vecteur\n",
     "    LSTM(64),\n",
     "    Dense(3, activation=\"softmax\")\n",
     "])\n",
